			     BZFlag Release Notes
			     ====================

BZFlag 2.0.5
------------

* Fix wrong kick if pausing having V and moving - Julio Jimenez
* Prevent long distance tank warping through walls - Sean Morrison
* Display paused state when screen capturing while playing - Sean Morrison
* Added new logDetail plugin - Bernt Hansen
* Fixed issue with denial-of-service message attacks - Sean Morrison
* Support for -window on Mac command line executions - Sean Morrison
* Show slot numbers in lagstats (if admin) - Mark Thomas, Mike Weisenborn
* FPS limit energy saver option for laptops - Karsten Behrmann, Sean Morrison
* Send admin channel warning if /password fails - Garrett Padera, Jeff Myers
* Known players not authenticated are detected - Tupone Alfredo
* Added /checkip command - Frank Thilo
* "Enable Local Shot/Spawn Effects" affects "Driving with" - Daniel Remenak
* Show shot reload indicators when driving with a tank - Daniel Remenak
* Fix misc/bzfquery.pl to handle MsgGameTime - Tegan, Mark Thomas
* Simple server list searching - Daniel Remenak

BZFlag 2.0.4  "Shiny" (2005-09-30)
----------------------------------

* Fixed server join bug when cached worlds disappear - Sean Morrison
* Prevent phantom zoned players from pausing - Sean Morrison
* Implemented multiple player hunt - Mark Thomas
* Directional keys pressing works, even in joy/mouse mode - Tupone Alfredo
* Jitter compensation removed. Too bad behaviour on ME players - Tupone Alfredo
* Put spawn params in BZDB to let server owners mod them as needed - Jeff Myers
* Fixed ban admin bug - Julio Jimenez
* Added /sendhelp command - Mike Weisenborn, Mark Thomas
* /ban /hostban take time keywords (short ...) too - Jeff Myers, Alfredo Tupone
* Inertia style indicatio no more used - Alfredo Tupone
* No more restriction on M (Momentum) flag - Alfredo Tupone
* Fixing authentication when changing callsign/password - Alfredo Tupone
* Fixing authentication when joining from command-line - Alfredo Tupone